force-app/main/default/objects/RE_MOA__c/RE_MOA__c.object-meta.xml
<CustomObject>
    <label>MOA</label>
    <nameField>
        <displayFormat>MOA-{000000000}</displayFormat>
        <label>MOA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MOA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>