force-app/main/default/objects/RE_MOA__c/fields/Challenged_User__c.field-meta.xml
<CustomField>
    <fullName>Challenged_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>user who challeneged the PSP in AM landing page</description>
    <label>Challenged User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MOA</relationshipName>
    <type>Lookup</type>
</CustomField>