force-app/main/default/objects/RE_MOA__c/fields/RE_Agreed_PSP__c.field-meta.xml
<CustomField>
    <fullName>RE_Agreed_PSP__c</fullName>
    <label>Agreed PSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>