force-app/main/default/objects/RE_MOA__c/fields/RE_Base_Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Base_Rate_Unit__c</fullName>
    <label>Base Rate Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_Rate_Unit_Set</valueSetName>
    </valueSet>
</CustomField>