force-app/main/default/objects/RE_MOA__c/fields/RE_CND_Competitive_Adj__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Competitive_Adj__c</fullName>
    <label>Competitive Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>