force-app/main/default/objects/RE_MOA__c/fields/RE_CND_Current_FxRate__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Current_FxRate__c</fullName>
    <label>Current FxRate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>