force-app/main/default/objects/RE_MOA__c/fields/RE_CND_Current_FxRate_Selected_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Current_FxRate_Selected_Date__c</fullName>
    <label>Current FxRate Selected Date</label>
    <type>Date</type>
</CustomField>