force-app/main/default/objects/RE_MOA__c/fields/RE_CND_Delta_Percentage__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Delta_Percentage__c</fullName>
    <label>% Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>