force-app/main/default/objects/RE_MOA__c/fields/RE_CND_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>