force-app/main/default/objects/RE_MOA__c/fields/RE_CND_Group__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Gas Oil</fullName>
            </value>
            <value>
                <fullName>Fx Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>