force-app/main/default/objects/RE_MOA__c/fields/RE_CND_Marker_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Marker_Name__c</fullName>
    <label>Marker Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chi CBOB</fullName>
            </value>
            <value>
                <fullName>Chi Rbob</fullName>
            </value>
            <value>
                <fullName>Chi ULS#2</fullName>
            </value>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>LA ULS#2</fullName>
            </value>
            <value>
                <fullName>NYH CBOB</fullName>
            </value>
            <value>
                <fullName>NYH RBOB Unl</fullName>
            </value>
            <value>
                <fullName>NYH ULS#2</fullName>
            </value>
            <value>
                <fullName>PNW CARBOB</fullName>
            </value>
            <value>
                <fullName>PNW ULS#2</fullName>
            </value>
            <value>
                <fullName>RBOB</fullName>
            </value>
            <value>
                <fullName>Reuters Fx</fullName>
            </value>
            <value>
                <fullName>USG CBOB</fullName>
            </value>
            <value>
                <fullName>USG ULS#2</fullName>
            </value>
            <value>
                <fullName>WTI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>