force-app/main/default/objects/RE_MOA__c/fields/RE_CND_Market_Move__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Market_Move__c</fullName>
    <label>Market Move</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>