force-app/main/default/objects/RE_MOA__c/fields/RE_CND_Today_s_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Today_s_Price__c</fullName>
    <label>Today’s Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>