force-app/main/default/objects/RE_MOA__c/fields/RE_isDisabled__c.field-meta.xml
<CustomField>
    <fullName>RE_isDisabled__c</fullName>
    <formula>IF( OR( ISPICKVAL(RE_Status__c, &apos;Submitted&apos;),ISPICKVAL(RE_Status__c, &apos;Auto Approved&apos;),ISPICKVAL(RE_Status__c, &apos;Approved&apos;)), true, false)</formula>
    <label>isDisabled</label>
    <type>Checkbox</type>
</CustomField>