force-app/main/default/objects/RE_MOA__c/fields/RE_Mid_Day_price_out__c.field-meta.xml
<CustomField>
    <fullName>RE_Mid_Day_price_out__c</fullName>
    <label>Mid Day price out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>