force-app/main/default/objects/RE_MOA__c/fields/RE_Price_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_Price_Value__c</fullName>
    <label>Price Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>