force-app/main/default/objects/RE_MOA__c/fields/RE_PSP__c.field-meta.xml
<CustomField>
    <fullName>RE_PSP__c</fullName>
    <formula>IF(ISBLANK(RE_Today_s_BSP__c),0,(IF(ISBLANK(RE_Target_Margin__c), 0, RE_Target_Margin__c)  +  IF(ISBLANK(RE_Today_s_BSP__c), 0, RE_Today_s_BSP__c)))</formula>
    <label>PSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>