force-app/main/default/objects/RE_MOA__c/fields/RE_Remark__c.field-meta.xml
<CustomField>
    <fullName>RE_Remark__c</fullName>
    <label>Remark</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>