force-app/main/default/objects/RE_MOA__c/fields/RE_Today_s_BSP__c.field-meta.xml
<CustomField>
    <fullName>RE_Today_s_BSP__c</fullName>
    <label>Today&apos;s BSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>