force-app/main/default/objects/RE_MOA__c/fields/RE_valid_from__c.field-meta.xml
<CustomField>
    <fullName>RE_valid_from__c</fullName>
    <label>RE valid from</label>
    <type>Date</type>
</CustomField>