force-app/main/default/objects/RE_MOA__c/fields/RE_valid_to__c.field-meta.xml
<CustomField>
    <fullName>RE_valid_to__c</fullName>
    <label>RE valid to</label>
    <type>Date</type>
</CustomField>