force-app/main/default/objects/RE_MOA__c/listViews/All_SOM.listView-meta.xml
<ListView>
    <fullName>All_SOM</fullName>
    <columns>NAME</columns>
    <columns>RE_Product__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_MC_Morning__c</columns>
    <columns>RE_Spot_Price_Adj__c</columns>
    <columns>RE_Prev_Mid_Day_price_out__c</columns>
    <columns>RE_Today_s_BSP__c</columns>
    <columns>RE_Target_Margin__c</columns>
    <columns>RE_PSP__c</columns>
    <columns>RE_Country__c</columns>
    <columns>RE_IsLatest__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/31/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_MOA__c.Malaysia</value>
    </filters>
    <label>All (SOM)</label>
</ListView>