force-app/main/default/objects/RE_MOA__c/listViews/RE_MOA_Approval_Queue_RE_MOA.listView-meta.xml
<ListView>
    <fullName>RE_MOA_Approval_Queue_RE_MOA</fullName>
    <filterScope>Queue</filterScope>
    <label>MOA Approval  Queue</label>
    <queue>RE_MOA_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>