force-app/main/default/objects/RE_MOA__c/listViews/RE_MY_Direct_List_Price.listView-meta.xml
<ListView>
    <fullName>RE_MY_Direct_List_Price</fullName>
    <columns>NAME</columns>
    <columns>RE_Product__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_Sales_org__c</columns>
    <columns>RE_Final_PSP__c</columns>
    <columns>RE_valid_from__c</columns>
    <columns>RE_valid_to__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_IsLatest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_MOA__c.Malaysia</value>
    </filters>
    <filters>
        <field>RE_Depot_Name__c</field>
        <operation>equals</operation>
        <value>Bagan Luar</value>
    </filters>
    <filters>
        <field>RE_Product__c</field>
        <operation>contains</operation>
        <value>SH ULG97,IGO 10 ppm B7</value>
    </filters>
    <label>RE MY Direct List Price</label>
    <sharedTo>
        <territory>Revolution_Territory.Malaysia</territory>
    </sharedTo>
</ListView>