force-app/main/default/objects/RE_MOA__c/listViews/TH_AMV.listView-meta.xml
<ListView>
    <fullName>TH_AMV</fullName>
    <columns>NAME</columns>
    <columns>RE_Product__c</columns>
    <columns>RE_Target_Margin__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_LDC_Morning__c</columns>
    <columns>RE_Spot_Price_Adj__c</columns>
    <columns>RE_Today_s_BSP__c</columns>
    <columns>RE_PSP__c</columns>
    <columns>RE_AM_Challenged_Price__c</columns>
    <columns>RE_Final_PSP__c</columns>
    <columns>RE_Country__c</columns>
    <columns>RE_IsLatest__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_MOA__c.Thailand</value>
    </filters>
    <filters>
        <field>RE_IsLatest__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_MOA__c.Thailand</value>
    </filters>
    <label>TH AMV</label>
</ListView>